Bug fix so the stupid Spotify API can be ignore when it blocks me - As the "Audio-Features" has no been hidden behind a "Extended Quota" mode - This used to cause an error in my code, but has now been ignored and the media status and album name and album cover are now properly loaded, but the BPM is now 0 for the time being,

--- a/frontend/static/styles/main.css
+++ b/frontend/static/styles/main.css
@@ -5,7 +5,9 @@
     --light-gray: #9ea5ba63;
     --ghost-gray: #d2d5df54;
     --blue: #37a6d187;
-    --pale-orange: ff977b8c;
+    --pale-orange: #ff977b8c;
+    --bs-danger: #dc3545d1;
+    
 }
 
 .card{
@@ -220,7 +222,11 @@ body{
     background-size: cover;
     background-position: center;
     filter: blur(1.3px);
-    filter: brightness(0.4);
+    filter: brightness(0.3);
+}
+
+#musicPlaying{
+    font-size: 0.7rem;
 }
 
 #album-container p,
